# speed-reader

./: .gitignore  README.md  auditoria-arquitectura-fallas.mmd  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
openspec/: config.yaml
openspec/changes/separate-core-cli-tts-gui/: apply-progress.md  design.md  proposal.md  tasks.md
openspec/specs/cli-reader/: spec.md
openspec/specs/core-import/: spec.md
openspec/specs/core-reading/: spec.md
openspec/specs/core-speech/: spec.md
openspec/specs/gui-tts-threading/: spec.md
packaging/: speedreader.desktop.in
scripts/: download-voice.py  download-voice.sh  generate-icon.py  generate-icon.sh  install-desktop.sh  launch.sh
src/speedreader/: __init__.py  __main__.py  app.py  domain.py  engine.py  orp.py  paths.py  profiles.py  settings.py
src/speedreader/cli/: __init__.py  main.py  reader.py  settings.py
src/speedreader/core/: __init__.py  domain.py  engine.py  (+4 more)
tests/: conftest.py  test_clipboard_importer.py  test_engine.py  test_file_importer.py  test_main_window.py  test_markdown_importer.py  test_plain_text_importer.py  test_settings.py  test_speech.py
tests/cli/: test_cli.py  test_cli_settings.py
tests/core/: test_core_no_qt.py  test_engine.py  test_orp.py  test_profiles.py  test_settings_protocol.py  test_speech_protocols_no_qt.py
tests/gui/: test_controller_view_integration.py  test_reading_controller.py  test_tts_threading.py
tests/speech/: __init__.py  test_azure_backend_capabilities.py  test_edge_backend_capabilities.py  test_pitch_capabilities.py  test_protocol_compat.py
(+30 files in other folders)
