[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "speedreader"
version = "0.1.0"
description = "Personal speed reading station"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "mistletoe>=1.3.0",
    "platformdirs>=4.0",
    "PySide6>=6.6.0",
    "typer>=0.26.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
tts = [
    "piper-tts>=1.2.0",
]

[project.scripts]
speedreader = "speedreader.app:main"
speedreader-cli = "speedreader.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
